# bdtcoin

./: .appveyor.yml  .cirrus.yml  .fuzzbuzz.yml  .gitignore  .travis.yml  CMakeLists.txt  CODEOWNERS  CONTRIBUTING.md  COPYING  INSTALL.md  Makefile.am  README.md  SECURITY.md  autogen.sh  configure.ac  libbdtcoinconsensus.pc.in  libbdtcoinkernel.pc.in  null.d  vcpkg.json
.github/: ISSUE_TEMPLATE.md  PULL_REQUEST_TEMPLATE.md
.tx/: config
build_msvc/: .gitignore  README.md  bdtcoin.sln  bdtcoin_config.h  libsecp256k1_config.h  msvc-autogen.py  vcpkg.json
ci/: lint_imagefile  lint_run_all.sh  test_imagefile  test_run_all.sh
cmake/: bdtcoin-build-config.h.in  ccache.cmake  crc32c.cmake  introspection.cmake  leveldb.cmake  minisketch.cmake  tests.cmake
contrib/: README.md  bdtcoin-cli.bash-completion  bdtcoin-qt.pro  bdtcoin-tx.bash-completion  bdtcoind.bash-completion  filter-lcov.py  gitian-build.py  install_db4.sh  valgrind.supp
depends/: Makefile  (+4 more)
doc/man/: Makefile.am  bdtcoin-cli.1  bdtcoin-qt.1  bdtcoin-tx.1  bdtcoin-util.1  bdtcoin-wallet.1  bdtcoind.1
src/ipc/: CMakeLists.txt  context.h  exception.h  interfaces.cpp  process.cpp  process.h  protocol.h
src/ipc/capnp/: common-types.h  common.capnp  context.h  echo-types.h  echo.capnp  init-types.h  init.capnp  mining-types.h  mining.capnp  mining.cpp  protocol.cpp  protocol.h
src/zmq/: CMakeLists.txt  zmqabstractnotifier.cpp  zmqabstractnotifier.h  zmqnotificationinterface.cpp  zmqnotificationinterface.h  zmqpublishnotifier.cpp  zmqpublishnotifier.h  zmqrpc.cpp  zmqrpc.h  zmqutil.cpp  zmqutil.h
(+2158 files in other folders)
