dist_man1_MANS=

if BUILD_BDTCOIND
  dist_man1_MANS+=bdtcoind.1
endif

if ENABLE_QT
  dist_man1_MANS+=bdtcoin-qt.1
endif

if BUILD_BDTCOIN_CLI
  dist_man1_MANS+=bdtcoin-cli.1
endif

if BUILD_BDTCOIN_TX
  dist_man1_MANS+=bdtcoin-tx.1
endif

if ENABLE_WALLET
if BUILD_BDTCOIN_WALLET
  dist_man1_MANS+=bdtcoin-wallet.1
endif
endif
